feat: add administration activity history
